# 2026_Wireless_Design

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  STM32F103C8TX_FLASH.ld  desk_design.ioc  st_nucleo_f103rb.cfg
Core/Inc/: main.h  stm32f1xx_it.h
Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
MDK-ARM/: desk_design.uvguix.Administrator  desk_design.uvoptx  desk_design.uvprojx  startup_stm32f103xb.lst
MDK-ARM/RTE/CMSIS/: RTX_Conf_CM.c
MDK-ARM/RTE/_desk_design/: RTE_Components.h
MDK-ARM/desk_design/: app.crf  bsp.crf  delay.crf  desk_design.axf  desk_design.build_log.htm  desk_design.htm  desk_design.lnp  desk_design_desk_design.dep  dht11.crf  elog.crf  elog_async.crf  elog_buf.crf  elog_port.crf  elog_utils.crf  hmi_user_uart.crf  key.crf  main.crf  rtx_conf_cm.crf  stm32f1xx_hal.crf  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_dma.crf  stm32f1xx_hal_exti.crf  stm32f1xx_hal_flash.crf  stm32f1xx_hal_flash_ex.crf  stm32f1xx_hal_gpio.crf  stm32f1xx_hal_gpio_ex.crf  stm32f1xx_hal_msp.crf  stm32f1xx_hal_pwr.crf  stm32f1xx_hal_rcc.crf  stm32f1xx_hal_rcc_ex.crf  stm32f1xx_hal_spi.crf  stm32f1xx_hal_tim.crf  stm32f1xx_hal_tim_ex.crf  stm32f1xx_hal_uart.crf  stm32f1xx_it.crf  sx1276-board.crf  sx1276.crf  system_stm32f1xx.crf  timer.crf  tlsf.crf  (+3 more)
easylogger/port/: elog_port.c
user/: app.c  app.h  bsp.c  bsp.h  key.c  key.h  vMsgExec.c
user/mem/: tlsf.h
wireless_page/design/: design.tftprj  主界面.tft
wireless_page/design/output/: DefineID.h  charset.txt  controls.xml  design.gwb  design.si  design.tftres
